...

    Navigator.of(context).push(MaterialPageRoute(
    builder: (context) => ListOffreA()));
    }
    },
                  child: Text(
                    "submit",
                    style: TextStyle(fontSize: 25),
                  )),
            ),
          ],
        ),
      ),
...
