...
              color: Colors.black54,
            ),
            textAlign: TextAlign.center,
          ),
          actions: <Widget>[
            ElevatedButton(
              child: new Text("OK",
                  style: TextStyle(
                    color: Colors.white,
                  )),
              style: ElevatedButton.styleFrom(primary: Colors.purple),
              onPressed: () {
                Navigator.pushAndRemoveUntil(
...
